--- a/css/style.css
+++ b/css/style.css
@@ -341,3 +341,46 @@ section{
     margin-bottom: 2rem;
     max-width: 60rem ;
 }
+
+/* 05 product card design */
+
+.landing-product-section .product-card{
+   position: relative;
+   overflow: hidden;
+   cursor: pointer;
+   border: 0.2rem solid var(--light-color);
+   /* border: 0.2rem solid var(--secondary-color); */
+   border-radius: 30px;
+   padding: 2rem 1rem;
+   transition: all 0.3s;
+}
+.landing-product-section .product-card .product-img{
+    height: 21rem;
+    margin-bottom: 7rem;
+    text-align: center;
+}
+.landing-product-section .product-card h3{
+    color: var(--primary-text);
+}
+.landing-product-section .product-card span{
+    font-size: 1.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--secondary-color);
+    margin-right: 0.5rem;
+    text-decoration: line-through;
+    transition: all 0.3s;
+}
+.landing-product-section .product-card .product-detail{
+    position: absolute;
+     bottom: -22rem; 
+     right: 0;
+    left: 0; 
+    text-align: center;
+    padding: 5rem 1rem;
+    background-color: var(--primary-text-maroon);
+    transition: all 0.5s ease;
+}
+.landing-product-section .product-card:hover .product-detail{
+    bottom: 0;
+}
