--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,8 @@ section{
 .product .banner-section,
 .gallery .banner-section,
 .contact .banner-section {
-    background: url('images/wood2.jpeg');
+    /* background: url('images/wood2.jpeg'); */
+    background: url('../images/front-img.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -427,4 +428,132 @@ section{
 }
 .Testimonial-section .desc-box{
     padding-left:2.5rem ;
+}
+
+/* 07 Gallery css */
+
+.gallery-section img{
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+    
+
+}
+
+.gallery-section a{
+    width: 70%;
+    height: 70%;
+}
+
+/* Footer section css */
+
+.footer_wrapper{
+ background: url("../images/footer-bg/footer-bg.png");
+ background: url("../images/footer-bg/images.png"); 
+
+ background-size: cover;
+ background-repeat: no-repeat;
+ background-position: top center;
+ width: 100%;
+ padding-top: 18.5rem;
+ padding-bottom: 0rem;
+/* padding-left: 3rem; */
+}
+.footer_wrapper h5 {
+    color: var(--text-white);
+    font-size: 2.5rem;
+    margin-bottom: 1.25rem;
+}
+.footer_wrapper ul li{
+ margin-bottom: 0.5rem;
+ list-style: none;
+}
+.footer_wrapper .company_details{
+    font-size: 1.4rem;
+}
+.footer_wrapper .contact-info li a{
+    color: var(--text-white);
+    font-size: 1.6rem;
+}
+.footer_wrapper .link-widget li a,
+.footer_wrapper p{
+    color: var(--text-white);
+font-size: 1.6rem;
+padding-left: 1.5rem;
+position: relative;
+-webkit-transition : all 0.3s ease-out 0s;
+transition: all 0.3s ease-out 0s;
+}
+
+.footer_wrapper .link-widget li a:before{
+    content:'\f105';
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    left: 0.3rem;
+    top: 50%;
+    -webkit-transform:translatey(-50%);
+    transform:translatey(-50%);
+}
+
+.footer_wrapper .link-widget li a:hover{
+    margin-left: 0.625rem;
+    color: var(--secondary-color);
+}
+.footer_wrapper .social-network a{
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 3.2;
+    margin: 0.5rem;
+    display: inline-block;
+    font-size: 1.2rem;
+    border: 0.125rem solid var(--text-white);
+    color: var(--text-white);
+    text-align: center;
+    border-radius: 100%;
+    -webkit-transition: 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition:all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.footer_wrapper .social-network a:hover{
+    background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
+    box-shadow: 0 0.625rem 0.9375rem 0 rgb(0 0 0 /10%);
+    transform: translateY(-0.1875rem);
+}
+.footer_wrapper .from-control{
+    font-size: 2rem;
+    color: var(--text-white);
+    outline: none;
+    border-color:white;
+}
+.footer_wrapper .from-control:focus{
+    outline: none;
+    box-shadow: none;
+    border-color:var(--secondary-color);
+}
+.footer_wrapper .copyright-section{
+    background-color: var(--secondary-color);
+    text-align: center;
+    margin-top: 5rem;
+}
+.footer_wrapper .copyright-section p{
+    margin-top: 0;
+    padding: 3rem 0;
+    line-height: 0;
+}
+.footer_wrapper .copyright-section a{
+    color: var(--primary-text);
+    font-weight: 600;
+}
+
+
+/* 09 About page css */
+
+.about .about-details p{
+   color: var(--primary-text);
+}
+/* 10 Product page css */
+.product .product-details p{
+    margin-bottom: 1.5rem;
 }
