add contavt page css

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -23,6 +23,7 @@
     .about .banner-section,
 .product .banner-section,
 .gallery .banner-section,
+.contact .banner-section,
 .contact .banner-section {
     padding-top: 12.5rem;
     padding-bottom: 3rem;
